# Real_time_chat

./: .env.example  .gitattributes  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: asgi.py  settings.py  urls.py
core/: views.py
room/: consumers.py  models.py  views.py
templates/core/: base.html
templates/room/: room.html
