[project]
name = "real-time-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Acejkee",email = "belousow.ilja@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "daphne (>=4.1.2,<5.0.0)",
    "channels (>=4.2.0,<5.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
